--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,5 +1,7 @@
-<app-header></app-header>
-<main>
-  <router-outlet />
-</main>
-<app-footer></app-footer>
+<div class="background-overlay">
+  <app-header></app-header>
+  <main>
+    <router-outlet />
+  </main>
+  <app-footer></app-footer>
+  </div>
