--- a/src/app/components/footer/footer.html
+++ b/src/app/components/footer/footer.html
@@ -3,18 +3,18 @@
     <div class="footer-content">
       <div class="footer-section">
         <h3>Pablo Menéndez Navarro</h3>
-        <p>Desarrollador Full Stack apasionado por crear soluciones tecnológicas innovadoras.</p>
+        <p>Desarrollador Full Stack</p>
       </div>
       
       <div class="footer-section">
-        <h4>Enlaces</h4>
-        <ul>
-          <li><a routerLink="/">Inicio</a></li>
-          <li><a routerLink="/about">Sobre mí</a></li>
-          <li><a routerLink="/projects">Proyectos</a></li>
-          <li><a routerLink="/skills">Habilidades</a></li>
-          <li><a routerLink="/contact">Contacto</a></li>
-        </ul>
+        <h4>Enlaces de interés</h4>
+            <ul>
+              <li><a routerLink="/">Inicio</a></li>
+              <li><a routerLink="/about">Sobre mí</a></li>
+              <li><a routerLink="/projects">Proyectos</a></li>
+              <li><a routerLink="/news">Noticias</a></li>
+              <li><a routerLink="/contact">Contacto</a></li>
+            </ul>
       </div>
       
       <div class="footer-section">
