Add dynamic animations and improve portfolio design

--- a/src/app/pages/home/home.html
+++ b/src/app/pages/home/home.html
@@ -1,4 +1,5 @@
 <section class="hero">
+  <app-waves></app-waves>
   <div class="hero-container">
     <div class="hero-content">
       <div class="hero-text">
